--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.3",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "flash": "^1.1.0",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.19"
   }
